# cloud-hosting

./: .gitignore  .gitmodules  Audit_Report.md  BUILD-STATUS.md  BUILD.md  CHANGES.md  CMakeLists-Standalone.txt  CMakeLists.txt  DEPLOYMENT_VERIFICATION.md  MASM_VULKAN_COMPLETE.md  OFFLINE_SETUP.md  OFFLINE_TRANSFORMATION.md  PR-README.md  PRODUCTION_READY.md  PROJECT-COMPLETION.md  QUICK-REFERENCE.md  QUICKSTART.md  README-QTAPP.md  README-RAWRXD.md  README.md  RESOLUTION.md  SUMMARY.md  VERIFICATION.md  WIDGETS_IMPLEMENTATION_SUMMARY.md  install-local.bat  install-local.sh  model-manager.sh  quick-start.sh  setup.sh  standalone_main.cpp  standalone_web_bridge.cpp  standalone_web_bridge.hpp  start-ui.sh  verify-project.sh
.do/: app.yaml
.github/: CI_CD_DELIVERY_COMPLETE.md  CI_CD_SETUP.md  copilot-instructions.md
.github/workflows/: build.yml  ci.yml  deploy-digitalocean.yml  diagnostics.yml  performance.yml  quality.yml  rawrxd-build.yml  rawrxd-test.yml  release.yml  tests.yml
deploy/: README-CLOUD-HOSTING.md
deploy/docker/: Dockerfile  docker-compose.yml
deploy/scripts/: deploy-to-digitalocean.sh  local-dev-setup.sh  upload-to-spaces.sh
deploy/terraform/: main.tf  user_data.sh  variables.tf
include/: common_types.hpp
masm64/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  Makefile  README.md  build.bat
masm64/compression/: zlib.asm  zstd.asm
masm64/crypto/: openssl.asm
masm64/cuda/: cuda_runtime.asm
masm64/examples/: neural_network_demo.cpp
masm64/include/: vulkan_types.inc
masm64/rocm/: hip_runtime.asm
masm64/tests/: basic_test.cpp
masm64/vulkan/compute/: activation_funcs.asm  matrix_ops.asm  tensor_ops.asm
masm64/vulkan/core/: vk_command.asm  vk_instance.asm
masm64/vulkan/memory/: vk_memory.asm
masm64/vulkan/sync/: vk_sync.asm
scripts/: build.ps1  validate-copilot-instructions.py
services/: requirements.txt  test_smoke.py
services/hexmag/: hexmag_engine.py
src/: main.cpp
src/agent/: agentic_failure_detector.cpp  agentic_failure_detector.hpp  agentic_puppeteer.cpp  agentic_puppeteer.hpp  auto_bootstrap.cpp  self_patch.cpp
src/cli/: cli_commands.cpp  cli_commands.hpp  main_cli.cpp  model_loader.cpp  model_loader.hpp
src/components/: ai_merge_resolver.cpp  ai_merge_resolver.hpp  model_registry.cpp  model_registry.hpp  sandboxed_terminal.cpp  sandboxed_terminal.hpp  semantic_diff_analyzer.cpp  semantic_diff_analyzer.hpp  voice_processor.cpp  voice_processor.hpp  zero_retention_manager.cpp  zero_retention_manager.hpp
src/core/: gpu_stubs.cpp  gpu_stubs.hpp  patch_result.hpp  platform_utils.cpp  platform_utils.hpp
src/orchestration/: agent_coordinator.cpp  agent_coordinator.hpp
src/qtapp/: CodeEditor.cpp  CodeEditor.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MiniMap.cpp  MiniMap.hpp  Subsystems.h  byte_level_hotpatcher.cpp  byte_level_hotpatcher.hpp  gguf_server_hotpatch.cpp  gguf_server_hotpatch.hpp  main_qt.cpp  model_memory_hotpatch.cpp  model_memory_hotpatch.hpp  proxy_hotpatcher.cpp  proxy_hotpatcher.hpp  unified_hotpatch_manager.cpp  unified_hotpatch_manager.hpp
src/qtapp/widgets/accessibility_widget/: CMakeLists.txt  accessibility_widget.cpp  accessibility_widget.h
src/qtapp/widgets/ai_completion_cache/: CMakeLists.txt  ai_completion_cache.cpp  ai_completion_cache.h
src/qtapp/widgets/ai_review_widget/: CMakeLists.txt  ai_review_widget.cpp  ai_review_widget.h
src/qtapp/widgets/audio_call_widget/: CMakeLists.txt  audio_call_widget.cpp  audio_call_widget.h
src/qtapp/widgets/bookmark_widget/: CMakeLists.txt  bookmark_widget.cpp  bookmark_widget.h
src/qtapp/widgets/breadcrumb_bar/: CMakeLists.txt  breadcrumb_bar.cpp  breadcrumb_bar.h
src/qtapp/widgets/code_minimap/: CMakeLists.txt  code_minimap.cpp  code_minimap.h
src/qtapp/widgets/code_stream_widget/: CMakeLists.txt  code_stream_widget.cpp  code_stream_widget.h
src/qtapp/widgets/inline_chat_widget/: CMakeLists.txt  inline_chat_widget.cpp  inline_chat_widget.h
src/qtapp/widgets/language_client_host/: CMakeLists.txt  language_client_host.cpp  language_client_host.h
src/qtapp/widgets/macro_recorder_widget/: CMakeLists.txt  macro_recorder_widget.cpp  macro_recorder_widget.h
src/qtapp/widgets/plugin_manager_widget/: CMakeLists.txt  plugin_manager_widget.cpp  plugin_manager_widget.h
src/qtapp/widgets/pomodoro_widget/: CMakeLists.txt  pomodoro_widget.cpp  pomodoro_widget.h
src/qtapp/widgets/progress_manager/: CMakeLists.txt  progress_manager.cpp  progress_manager.h
src/qtapp/widgets/screen_share_widget/: CMakeLists.txt  screen_share_widget.cpp  screen_share_widget.h
src/qtapp/widgets/search_result_widget/: CMakeLists.txt  search_result_widget.cpp  search_result_widget.h
src/qtapp/widgets/task_manager_widget/: CMakeLists.txt  task_manager_widget.cpp  task_manager_widget.h
src/qtapp/widgets/telemetry_widget/: CMakeLists.txt  telemetry_widget.cpp  telemetry_widget.h
src/qtapp/widgets/time_tracker_widget/: CMakeLists.txt  time_tracker_widget.cpp  time_tracker_widget.h
src/qtapp/widgets/todo_widget/: CMakeLists.txt  todo_widget.cpp  todo_widget.h
src/qtapp/widgets/update_checker_widget/: CMakeLists.txt  update_checker_widget.cpp  update_checker_widget.h
src/qtapp/widgets/welcome_screen_widget/: CMakeLists.txt  welcome_screen_widget.cpp  welcome_screen_widget.h
src/qtapp/widgets/whiteboard_widget/: CMakeLists.txt  whiteboard_widget.cpp  whiteboard_widget.h
src/security/: uac_bypass_masm.asm
tests/: self_test_gate.cpp
